test/parallel/forall/may-vs-must-par/stmt-mustpar-err-inst2SA.good
stmt-mustpar-err-inst2SA.chpl:4: error: A leader iterator is not found for the iterable expression in this forall loop
