test/parallel/forall/may-vs-must-par/stmt-mustpar-err-inst2SA.chpl
use datas;

// error - leader is not provided
forall IND in zip(inst1SA, inst2SA) do
  writeln("forall IND in zip(inst1SA, inst2SA)");
